# QTServerSQL

./: CMakeLists.txt  main.cpp  talk_to_client.h
UDBClient/: CMakeLists.txt  main.cpp
UDBNetworking/: CMakeLists.txt
UDBNetworking/include/UDBNetworking/: tcp_connection.h  tcp_server.h
UDBNetworking/src/: tcp_connection.cpp  tcp_server.cpp
UDBServer/: CMakeLists.txt  main.cpp  talk_to_client.cpp
